envfix: correct repo.

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://github.com/cbhuber17.github.io"
+  "homepage": "http://cbhuber17.github.io/react-advice"
 }
